@@ -1,3 +1,8 @@
+2004-11-19  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b274
+
+	* Fix: Try and detect a corrupt albumdb.dat and rebuild without
+	  displaying numerous errors to the user
+
 2004-11-15  Jay Rossiter <cryptographite@users.sf.net>  1.5-cvs-b273
 
 	* Change: Allow session-sharing in devMode so that pages 
